# flower_classifier_db

./: .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: app.py
data/: flowers.db  split.csv
scripts/: build_db.py  download_data.py  predict.py  split_dataset.py  test_loader.py  train.py
src/flower_classifier_db/: __init__.py  data.py  database.py  dataloader.py  db.py  utils.py
