[project]
name = "flower_classifier_db"
version = "0.1.0"
description = ""
authors = [
    {name = "Ismaël Lajaaiti",email = "ismael.lajaaiti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "tensorflow-macos (>=2.16.2,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "tensorflow-datasets (>=4.9.9,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "streamlit (>=1.47.1,<2.0.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
]

[tool.poetry]
packages = [{include = "flower_classifier_db", from = "src"}]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.pyright]
venvPath = "."
venv = ".venv"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
